--- a/css/Style.css
+++ b/css/Style.css
@@ -9,7 +9,7 @@ body{
 }
 #overall_background_welcome {
 	background-color:transparent;
-	height:500px;
+	height:100%;
 	width:100%;
 	padding-top:50px;
 	top:0;
