--- a/css/Style.css
+++ b/css/Style.css
@@ -147,6 +147,7 @@ body{
     padding-top:50px;
     margin-bottom:15px;
     font-size:20px;
+	z-index:0;
     height:500px;
     filter:opacity(170%) ;
 }
